--- a/Responsive Web Design/survey form/index.html
+++ b/Responsive Web Design/survey form/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <title>Survey Form</title>
+</head>
+<body>
+  
+  
+</body>
+</html>
