--- a/Responsive Web Design/survey form/index.html
+++ b/Responsive Web Design/survey form/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Survey Form</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" >
 </head>
 <body>
 <main id="main">
