--- a/Responsive Web Design/survey form/index.html
+++ b/Responsive Web Design/survey form/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <main id="main">
+    
+    <h1 id='title'>Dr. Norman Borlaug </h1>
+    <h1 id='title'>Dr. Norman Borlaug </h1>
     <h1 id='title'>Dr. Norman Borlaug </h1>
         
 </main>  
