--- a/Responsive Web Design/survey form/index.html
+++ b/Responsive Web Design/survey form/index.html
@@ -13,6 +13,9 @@
     <label></label>
     <label for="name" id='name-label'>name:</label>
     <input id="name" type="text" placeholder="Enter your name"  required>
+
+    <label for="email" id='email-label'>email:</label>
+    
 </form>
     
 </main>  
