--- a/Responsive Web Design/survey form/index.html
+++ b/Responsive Web Design/survey form/index.html
@@ -15,6 +15,7 @@
     <input id="name" type="text" placeholder="Enter your name"  required>
 
     <label for="email" id='email-label'>email:</label>
+    <input id="email" type="email" placeholder="Enter your email"  required>
     
 </form>
     
