--- a/Responsive Web Design/survey form/index.html
+++ b/Responsive Web Design/survey form/index.html
@@ -16,6 +16,8 @@
 
     <label for="email" id='email-label'>email:</label>
     <input id="email" type="email" placeholder="Enter your email"  required>
+
+    <label for="age" id='age-label'>age:</label>
     
 </form>
     
