--- a/Responsive Web Design/survey form/index.html
+++ b/Responsive Web Design/survey form/index.html
@@ -18,7 +18,7 @@
     <input id="email" type="email" placeholder="Enter your email"  required>
 
     <label for="age" id='age-label'>age:</label>
-    <label for="age" id='age-label'>age:</label> <label for="age" id='age-label'>age:</label>
+    <label for="age" id='age-label'>age:</label> 
     <label for="age" id='age-label'>age:</label>
    
    
