--- a/Responsive Web Design/cafe menu/index.html
+++ b/Responsive Web Design/cafe menu/index.html
@@ -1,7 +1,8 @@
 <!Doctype HTML>
 <html>
   <head>
-    
+    <title>Cafe Menu</title>
+    <link type="text/css" rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
 
