--- a/Responsive Web Design/cafe menu/index.html
+++ b/Responsive Web Design/cafe menu/index.html
@@ -16,7 +16,14 @@
 </head>
 <body style="background-image: https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg;">
     <div class="menu">
+       <main>
+        <h1>CAMPER CAFE</h1>
+        <p></p>
+        <hr>
+
         
+
+        </main> 
     </div>
     
 </body>
