--- a/Responsive Web Design/cafe menu/index.html
+++ b/Responsive Web Design/cafe menu/index.html
@@ -21,7 +21,12 @@
         <p></p>
         <hr>
 
-        
+        <h2>Coffe</h2>
+        <img src="" >
+        <p>French Vanilla</p>
+        <p>Caramel Macchiato</p>
+        <p>Pumpkin Spice</p>
+
 
         </main> 
     </div>
