--- a/Responsive Web Design/cafe menu/index.html
+++ b/Responsive Web Design/cafe menu/index.html
@@ -27,6 +27,8 @@
         <p>Caramel Macchiato</p>
         <p>Pumpkin Spice</p>
 
+         <h2>Desserts</h2>
+        <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" >
 
         </main> 
     </div>
