--- a/Responsive Web Design/cafe menu/index.html
+++ b/Responsive Web Design/cafe menu/index.html
@@ -22,7 +22,7 @@
         <hr>
 
         <h2>Coffe</h2>
-        <img src="" >
+        <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" >
         <p>French Vanilla</p>
         <p>Caramel Macchiato</p>
         <p>Pumpkin Spice</p>
