--- a/Responsive Web Design/cafe menu/index.html
+++ b/Responsive Web Design/cafe menu/index.html
@@ -20,16 +20,19 @@
         <h1>CAMPER CAFE</h1>
         <p></p>
         <hr>
-
+        <section>
         <h2>Coffe</h2>
         <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" >
         <p>French Vanilla</p>
         <p>Caramel Macchiato</p>
         <p>Pumpkin Spice</p>
+        </section>
 
+         <section>
          <h2>Desserts</h2>
-        <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" >
+          <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" >
 
+         </section>
         </main> 
     </div>
     
