--- a/Responsive Web Design/cafe menu/index.html
+++ b/Responsive Web Design/cafe menu/index.html
@@ -18,7 +18,7 @@
     <div class="menu">
        <main>
         <h1>CAMPER CAFE</h1>
-        <p></p>
+        <p> Est. 2020</p>
         <hr>
         <section>
         <h2>Coffe</h2>
