--- a/Responsive Web Design/cafe menu/index.html
+++ b/Responsive Web Design/cafe menu/index.html
@@ -31,7 +31,9 @@
          <section>
          <h2>Desserts</h2>
           <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" >
-           
+        <p>French Vanilla</p>
+        <p>Caramel Macchiato</p>
+        <p>Pumpkin Spice</p>
          </section>
         </main> 
     </div>
